# api-ingestion-ref-arch

./: .gitignore  README.md  dummy.json  dummy.py  main.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
ingestion/: .dockerignore  Dockerfile
ingestion/app/: fetch.py  main.py  transform.py  write_gcs.py
ingestion/app/schemas/: open_meteo.py
ingestion/tests/: test_idempotency.py  test_transform.py
