[project]
name = "ingest-api"
version = "0.1.0"
description = "My API ingestion tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage>=3.8.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "orjson>=3.11.5",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
]
